--- a/html/comentarios.html
+++ b/html/comentarios.html
@@ -14,7 +14,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#"><img class="navbar-logo" src="../media/img/logotipo2.jpg"
+                <a class="navbar-brand" href="../index.html"><img class="navbar-logo" src="../media/img/logotipo2.jpg"
                         alt="logo"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
                     aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
@@ -50,7 +50,7 @@
         </div>
         <div class="col-auto">
             <button type="submit" class="btn btn-primary mb-3">Enviar comentario</button>
-          </div>
+        </div>
     </main>
 
     <footer>
