finalizacion css pagina inicio

--- a/index.html
+++ b/index.html
@@ -66,11 +66,16 @@
     </div>
   </section>
 
-  <section>
-    <h4>Mis cursos</h4>
-    <p>Actualmente me encuentro realizando cursos en freeCodeCamp y PotreroDigital</p>
-    <img src="media/img/ux-ui.png" alt="ux-ui">UX/UI DESIGN
-    <img src="media/img/web-design.png" alt="web-design">WEB DESIGN
+  <section class="mis-cursos">
+    <h3>Mis cursos</h3>
+    <div class="contenido-mis-cursos">
+      <p class="texto-mis-cursos">Actualmente me encuentro realizando cursos en freeCodeCamp y PotreroDigital</p>
+      <div class="img-mis-cursos">
+        <figure> <img src="media/img/ux-ui.png" alt="ux-ui"> <figcaption>UX/UI DESIGN</figcaption></figure>
+
+        <figure> <img src="media/img/web-design.png" alt="web-design"> <figcaption>WEB DESIGN</figcaption></figure>
+      </div>
+    </div>
   </section>
 
   <footer>
