--- a/html/contacto.html
+++ b/html/contacto.html
@@ -8,13 +8,18 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
   <link rel="stylesheet" href="../css/style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/4712691b19.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
   <header>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark mb-4">
       <div class="container-fluid">
-        <a class="navbar-brand" href="../index.html"><img class="navbar-logo" src="../media/img/logotipo2.jpg" alt="logo"></a>
+        <a class="navbar-brand" href="../index.html"><img class="navbar-logo" src="../media/img/logotipo2.jpg"
+            alt="logo"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarCollapse"
           aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -36,11 +41,13 @@
       </div>
     </nav>
   </header>
-  <main>
-    <h1>Contactate conmigo</h1>
-    <a href="https://www.instagram.com/lulirolla/">Instagram</a>
-    <a href="https://wa.me/2915048941">WhatsApp</a>
-    <a href="https://www.facebook.com/luh.rolla">Facebook</a>
+  <main class="main-contacto">
+    <p class="texto-contacto">Contactate conmigo</p>
+    <div class="redes-contacto">
+      <a  href="https://www.instagram.com/lulirolla/"><i class="fa-brands fa-instagram iconos-redes"></i></a>
+      <a  href="https://wa.me/2915048941"><i class="fa-brands fa-whatsapp iconos-redes"></i></a>
+      <a  href="https://www.facebook.com/luh.rolla"><i class="fa-brands fa-facebook-f iconos-redes"></i></a>
+    </div>
   </main>
   <footer>
     <p>Hecho por RollaLucía</p>
@@ -49,5 +56,7 @@
     integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
     crossorigin="anonymous"></script>
 </body>
+
+
 
 </html>
