colocacion estilos pagina comentarios

--- a/html/comentarios.html
+++ b/html/comentarios.html
@@ -8,6 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;400;600&display=swap" rel="stylesheet">
 </head>
 
 <body>
@@ -38,18 +41,20 @@
         </nav>
     </header>
 
-    <main>
-        <div class="mb-3">
-            <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Ingresá tu mail">
-        </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Dejame un comentario sobre qué podría
-                mejorar!</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <div class="col-auto">
-            <button type="submit" class="btn btn-primary mb-3">Enviar comentario</button>
+    <main class="main-comentarios">
+        <p class="texto-comentarios">Dejame un comentario sobre mi página y ayudame a mejorar</p>
+        <div class="cuestionario-comentarios">
+            <div class="mb-3">
+                <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
+                <input  type="email" class="form-control entradas-comentarios" id="exampleFormControlInput1" placeholder="Ingresá tu mail">
+            </div>
+            <div class="mb-3">
+                <!-- <label for="exampleFormControlTextarea1" class="form-label">Dejame un comentario sobre qué podría mejorar!</label> -->
+                <textarea class="form-control entradas-comentarios" id="exampleFormControlTextarea1" rows="3" placeholder="Escribí tu comentario acá"></textarea>
+            </div>
+            <div class="col-auto">
+                <button type="submit" class="btn btn-primary mb-3">Enviar comentario</button>
+            </div>
         </div>
     </main>
 
