arreglo media query pagina inicio

--- a/html/comentarios.html
+++ b/html/comentarios.html
@@ -43,7 +43,7 @@
 
     <main class="main-comentarios">
         <p class="texto-comentarios">Dejame un comentario sobre mi página y ayudame a mejorar</p>
-        <div class="cuestionario-comentarios">
+        <form class="cuestionario-comentarios">
             <div class="mb-3">
                 <!-- <label for="exampleFormControlInput1" class="form-label">Email address</label> -->
                 <input  type="email" class="form-control entradas-comentarios" id="exampleFormControlInput1" placeholder="Ingresá tu mail">
@@ -55,7 +55,7 @@
             <div class="col-auto">
                 <button type="submit" class="btn btn-primary mb-3">Enviar comentario</button>
             </div>
-        </div>
+        </form>
     </main>
 
     <footer>
