--- a/index.html
+++ b/index.html
@@ -43,26 +43,30 @@
   </header>
 
   <main class="main-inicio">
-    <p class="texto-main-inicio"><span class="texto1-main-inicio"> Hola!</span><br> <span class="texto2-main-inicio">Soy
-        Lucía</span><br> <span class="texto3-main-inicio">Estudiante de desarrollo web</span></p>
-    <img src="media/img/foto-main.jpg" alt="Lucía Rolla">
+    <p class="texto-main-inicio"><span class="texto1-main-inicio"> Hola!</span> <span class="texto2-main-inicio">Soy
+        Lucía</span> <span class="texto3-main-inicio">Estudiante de desarrollo web</span></p>
+    <img class="img-main-inicio" src="media/img/foto-main.jpg" alt="Lucía Rolla">
   </main>
   <section class="sobre-mi">
-    <img src="media/img/foto-about-me.jpg" alt="Lucía Rolla" class="img-sobre-mi">
-    <div class="texto-sobre-mi">
-      <h3>Más sobre mi</h3>
-      <div class="nombre">
-        <p>Nombre:</p>
-        <p>Lucía Rolla</p>
+    <h3>Más sobre mí</h3>
+    <div class="card-sobre-mi">
+      <div class="texto-sobre-mi">
+        <div class="nombre">
+          <p>Nombre:</p>
+          <p>Lucía Rolla</p>
+        </div>
+        <div class="edad">
+          <p>Edad:</p>
+          <p>24 años</p>
+        </div>
+        <div class="github">
+          <p>Github:</p>
+          <a href="github.com/rollalucia">github.com/rollalucia</a>
+
+        </div>
+        
       </div>
-      <div class="edad">
-        <p>Edad:</p>
-        <p>24 años</p>
-      </div>
-      <div class="github">
-        <p>Github:</p>
-        <a href="github.com/rollalucia">github.com/rollalucia</a>
-      </div>
+      <img src="media/img/foto-about-me.jpg" alt="Lucía Rolla" class="img-sobre-mi">
     </div>
   </section>
 
@@ -71,9 +75,13 @@
     <div class="contenido-mis-cursos">
       <p class="texto-mis-cursos">Actualmente me encuentro realizando cursos en freeCodeCamp y PotreroDigital</p>
       <div class="img-mis-cursos">
-        <figure> <img src="media/img/ux-ui.png" alt="ux-ui"> <figcaption>UX/UI DESIGN</figcaption></figure>
+        <figure> <img src="media/img/ux-ui.png" alt="ux-ui">
+          <figcaption>UX/UI DESIGN</figcaption>
+        </figure>
 
-        <figure> <img src="media/img/web-design.png" alt="web-design"> <figcaption>WEB DESIGN</figcaption></figure>
+        <figure> <img src="media/img/web-design.png" alt="web-design">
+          <figcaption>WEB DESIGN</figcaption>
+        </figure>
       </div>
     </div>
   </section>
